[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock-common"
version = "0.1.0"
description = "Shared Python utilities and models for Airlock"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "typing-extensions>=4.8.0",
]

[tool.setuptools]
packages = ["airlock_common"]

